--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react-redux": "^0.2.2",
     "qs": "^4.0.0"
   },
+  "dependencies": {
+    "invariant": "^2.1.0"
+  },
   "devDependencies": {
     "babel": "^5.5.8",
     "babel-core": "5.6.15",
