--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "clean": "rimraf lib",
-    "build": "babel src --out-dir lib",
+    "build": "babel src --out-dir lib && babel node_modules/history/modules --out-dir node_modules/history/lib",
     "build:umd": "npm run build:umd:routex && npm run build:umd:react",
     "build:umd:routex": "webpack src/index.js dist/routex.js && NODE_ENV=production webpack src/index.js dist/routex.min.js",
     "build:umd:react": "MODULENAME=react-routex webpack src/react/index.js dist/react-routex.js && NODE_ENV=production MODULE_NAME=react-routex webpack src/react/index.js dist/react-routex.min.js",
@@ -34,6 +34,7 @@
     "qs": "^4.0.0"
   },
   "dependencies": {
+    "history": "git://github.com/michalkvasnicak/history.git#a4e01cf04ecb1983b2317b76cd2a87f6886b55b6",
     "invariant": "^2.1.0"
   },
   "devDependencies": {
