--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "node": true
   },
   "rules": {
+    "padded-blocks": 0,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
