--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "routex",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Simple router for Redux universal applications. Can be used with React too.",
   "main": "lib/index.js",
   "license": "MIT",
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "babel": "^5.5.8",
-    "babel-core": "5.6.15",
+    "babel-core": "^5.6.15",
     "babel-eslint": "^3.1.15",
     "babel-loader": "^5.1.4",
     "eslint": "^0.23",
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^2.3.0",
     "chai": "^3.0.0",
     "chai-as-promised": "5.1.0",
+    "jsdom": "^5.0.0",
     "mocha": "^2.2.5",
     "mocha-jsdom": "^1.0.0",
     "qs": "^4.0.0",
