--- a/package.json
+++ b/package.json
@@ -18,17 +18,15 @@
     "react"
   ],
   "scripts": {
-    "clean": "rimraf lib",
-    "build": "npm run build:node && npm run build:umd",
-    "build:node": "babel src --out-dir lib && babel node_modules/history/modules --out-dir node_modules/history/lib",
+    "clean": "rimraf lib && rimraf dist",
+    "build": "npm run clean && npm run build:node && npm run build:umd",
+    "build:node": "babel src --out-dir lib",
     "build:umd": "npm run build:umd:routex && npm run build:umd:react",
     "build:umd:routex": "webpack src/index.js dist/routex.js && NODE_ENV=production webpack src/index.js dist/routex.min.js",
     "build:umd:react": "MODULENAME=react-routex webpack src/react/index.js dist/react-routex.js && NODE_ENV=production MODULE_NAME=react-routex webpack src/react/index.js dist/react-routex.min.js",
     "lint": "eslint -c .eslintrc src test",
-    "test": "NODE_ENV=test prever 'test/**/*.spec.js'",
-    "test:browser": "NODE_ENV=test prever -e browser",
-    "test:browser:watch": "npm run test:browser -- -w",
-    "prepublish": "npm run lint && npm run test && npm run clean && npm run build"
+    "test": "npm run lint && NODE_ENV=test prever 'test/**/*.spec.js'",
+    "test:browser": "NODE_ENV=test prever -e browser"
   },
   "peerDependencies": {
     "history": "^1.0.0",
@@ -44,9 +42,9 @@
     "babel-core": "^5.6.15",
     "babel-eslint": "^3.1.15",
     "babel-loader": "^5.1.4",
-    "eslint": "^0.23",
-    "eslint-config-airbnb": "0.0.6",
-    "eslint-plugin-react": "^2.3.0",
+    "eslint": "^1.0.0",
+    "eslint-config-airbnb": "^0.0.7",
+    "eslint-plugin-react": "^3.2.2",
     "history": "^1.0.0",
     "chai": "^3.0.0",
     "chai-as-promised": "5.1.0",
