--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     "build:umd:react": "MODULENAME=react-routex webpack src/react/index.js dist/react-routex.js && NODE_ENV=production MODULE_NAME=react-routex webpack src/react/index.js dist/react-routex.min.js",
     "lint": "eslint -c .eslintrc src test",
     "test": "npm run lint && NODE_ENV=test prever 'test/**/*.spec.js'",
-    "test:browser": "NODE_ENV=test prever -e browser"
+    "test:browser": "NODE_ENV=test prever -e browser 'test/**/*.spec.js'"
   },
   "peerDependencies": {
-    "history": "^1.0.0",
+    "history": "^1.3.0",
     "redux": "^1.0.0 || ^1.0.0-rc",
-    "react-redux": "^0.2.2",
-    "qs": "^4.0.0"
+    "react-redux": "^0.2.2"
   },
   "dependencies": {
     "invariant": "^2.1.0"
