--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:umd:routex": "webpack src/index.js dist/routex.js && NODE_ENV=production webpack src/index.js dist/routex.min.js",
     "build:umd:react": "MODULENAME=react-routex webpack src/react/index.js dist/react-routex.js && NODE_ENV=production MODULE_NAME=react-routex webpack src/react/index.js dist/react-routex.min.js",
     "lint": "eslint -c .eslintrc src test",
-    "test": "npm run lint && NODE_ENV=test prever 'test/**/*.spec.js'",
+    "test": "npm run lint && NODE_ENV=test prever -v 'test/**/*.spec.js'",
     "test:browser": "NODE_ENV=test prever -e browser 'test/**/*.spec.js'"
   },
   "peerDependencies": {
@@ -34,6 +34,7 @@
     "react-redux": "^0.2.2"
   },
   "dependencies": {
+    "qs": "^4.0.0",
     "invariant": "^2.1.0"
   },
   "devDependencies": {
@@ -44,11 +45,10 @@
     "eslint": "^1.0.0",
     "eslint-config-airbnb": "^0.0.7",
     "eslint-plugin-react": "^3.2.2",
-    "history": "^1.0.0",
+    "history": "^1.3.0",
     "chai": "^3.0.0",
     "chai-as-promised": "5.1.0",
     "prever": "^0.4.0",
-    "qs": "^4.0.0",
     "redux": "^1.0.0-rc",
     "react": "^0.13.3",
     "react-redux": "^0.2.2",
