support redux 2.0 and 3.0
support only react 0.14

change testing framework to mocha

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,15 @@
     "mocha": true,
     "node": true
   },
+  "ecmaFeatures": {
+    "jsx": true
+  },
   "rules": {
     "comma-dangle": [2, "never"],
     "padded-blocks": 0,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
-
     // indent 4 spaces
     "indent": [2, 4, {"SwitchCase": 1}]
   },
