--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "build:umd:routex": "webpack src/index.js dist/routex.js && NODE_ENV=production webpack src/index.js dist/routex.min.js",
     "build:umd:react": "MODULENAME=react-routex webpack src/react/index.js dist/react-routex.js && NODE_ENV=production MODULE_NAME=react-routex webpack src/react/index.js dist/react-routex.min.js",
     "lint": "eslint -c .eslintrc src test",
-    "test": "npm run lint && NODE_ENV=test prever -v 'test/**/*.spec.js'",
-    "test:browser": "NODE_ENV=test prever -e browser 'test/**/*.spec.js'"
+    "test": "mocha --compilers js:babel/register --recursive"
   },
   "peerDependencies": {
     "history": "^1.3.0",
-    "redux": "^1.0.0 || ^1.0.0-rc",
-    "react-redux": "^0.2.2"
+    "redux": "^2.0.0 || ^3.0.0",
+    "react-redux": "^2.0.0 || ^3.0.0"
   },
   "dependencies": {
     "qs": "^4.0.0",
@@ -44,16 +43,20 @@
     "babel-loader": "^5.1.4",
     "eslint": "^1.0.0",
     "eslint-config-airbnb": "^0.0.7",
-    "eslint-plugin-react": "^3.2.2",
+    "eslint-plugin-react": "^3.2.3",
     "history": "^1.3.0",
     "chai": "^3.0.0",
     "chai-as-promised": "5.1.0",
-    "prever": "^0.4.0",
-    "redux": "^1.0.0-rc",
-    "react": "^0.13.3",
-    "react-redux": "^0.2.2",
+    "jsdom": "~5.4.3",
+    "mocha": "^2.2.5",
+    "mocha-jsdom": "~0.4.0",
+    "redux": "^2.0.0",
+    "react": "^0.14.0-rc1 || ^0.14.0",
+    "react-addons-test-utils": "^0.14.0-rc1 || ^0.14.0",
+    "react-dom": "^0.14.0-rc1 || ^0.14.0",
+    "react-redux": "^2.0.0",
     "rimraf": "^2.3.4",
-    "sinon": "git://github.com/cjohansen/Sinon.JS#sinon-2.0",
+    "sinon": "^1.16.0",
     "webpack": "^1.10.1"
   }
 }
