--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "routex",
-  "version": "0.4.2",
+  "version": "1.0.0-alpha.1",
   "description": "Simple router for Redux universal applications. Can be used with React too.",
   "main": "lib/index.js",
   "license": "MIT",
