--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,10 @@
 machine:
   pre:
-    - "sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y"
-    - "sudo apt-get update -y"
-    - "sudo apt-get install gcc-4.8 g++-4.8 -y"
-    - "sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 50"
-    - "sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50"
+    - "sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20"
+    - "sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20"
     - "nvm install v4.1.1 && nvm alias default v4.1.1"
+dependencies:
+  pre:
     - "npm install -g npm"
 test:
   override:
