--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "jsdom": "~5.4.3",
     "mocha": "^2.2.5",
     "mocha-jsdom": "~0.4.0",
-    "redux": "^2.0.0",
-    "react": "^0.14.0-rc1 || ^0.14.0",
-    "react-addons-test-utils": "^0.14.0-rc1 || ^0.14.0",
-    "react-dom": "^0.14.0-rc1 || ^0.14.0",
+    "redux": "^3.0.0",
+    "react": "^0.14.0",
+    "react-addons-test-utils": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-redux": "^2.0.0",
     "rimraf": "^2.3.4",
     "sinon": "^1.16.0",
