--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "babel-eslint": "^3.1.15",
     "babel-loader": "^5.1.4",
     "eslint": "^1.0.0",
-    "eslint-config-airbnb": "^0.0.7",
-    "eslint-plugin-react": "^3.2.3",
+    "eslint-config-airbnb": "^1.0.0",
+    "eslint-plugin-mocha": "^1.1.0",
     "history": "^1.3.0",
     "chai": "^3.0.0",
     "chai-as-promised": "5.1.0",
