--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^1.0.0",
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-mocha": "^1.1.0",
+    "eslint-plugin-react": "^3.13.1",
     "history": "^1.3.0",
     "chai": "^3.0.0",
     "chai-as-promised": "5.1.0",
