--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-redux": "^2.0.0 || ^3.0.0"
   },
   "dependencies": {
-    "qs": "^4.0.0",
+    "query-string": "^3.0.0",
     "invariant": "^2.1.0"
   },
   "devDependencies": {
@@ -44,7 +44,7 @@
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-mocha": "^1.1.0",
     "eslint-plugin-react": "^3.13.1",
-    "history": "^1.3.0",
+    "history": "1.3.1",
     "chai": "^3.0.0",
     "chai-as-promised": "5.1.0",
     "jsdom": "~5.4.3",
