--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "test": "npm run lint && mocha --compilers js:babel/register --recursive"
   },
   "peerDependencies": {
-    "redux": "^2.0.0 || ^3.0.0",
-    "react-redux": "^2.0.0 || ^3.0.0"
+    "redux": ">=2.0.0",
+    "react-redux": ">=2.0.0"
   },
   "dependencies": {
     "qs": "^4.0.0",
@@ -54,7 +54,7 @@
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
     "react-dom": "^0.14.0",
-    "react-redux": "^2.0.0",
+    "react-redux": "^4.0.0",
     "rimraf": "^2.3.4",
     "sinon": "^1.16.0",
     "webpack": "^1.10.1"
